# qa-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: QA-Service-Documentation.docx  generate_docx.py
src/qa_service/: __init__.py  config.py  dependencies.py  main.py
src/qa_service/models/: __init__.py  document.py  evaluate.py  ingest.py  query.py
src/qa_service/observability/: __init__.py  logging.py  metrics.py
src/qa_service/prompts/: __init__.py  answer.yaml  judge.yaml
src/qa_service/providers/: __init__.py  embedding.py  llm.py
src/qa_service/repository/: __init__.py  vector_store.py
src/qa_service/routes/: documents.py  evaluate.py  health.py  ingest.py  query.py
src/qa_service/services/: __init__.py  chunker.py  judge.py  pdf_parser.py  rag.py
