[project]
name = "qa-service"
version = "0.1.0"
description = "Document Q&A service with RAG and LLM-as-judge evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.137.1",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-multipart==0.0.32",
    "structlog==26.1.0",
    "prometheus-client==0.25.0",
    "pypdf==6.13.2",
    "tiktoken==0.13.0",
    "sentence-transformers==5.5.1",
    "chromadb==1.5.9",
    "openai==2.41.1",
    "pyyaml==6.0.3",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.17",
    "mypy==1.20.2",
    "types-pyyaml==6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qa_service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "N", "SIM", "RUF",
]
# B008: FastAPI uses Depends/File/Form as default arg values by design.
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: integration tests requiring external services",
]
